add "numberConnections : 0" + update API
